--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ author: "Corina Solano"
 format: html
 toc: true
 lang: es
-theme: morph
+theme: cyborg
 ---
 
 # Introducción 
@@ -103,7 +103,7 @@ kable()
 ```
 
 
-# Ejemplo 4
+## Ejemplo 4
 
 ```{r}
 #| label: filter-04
@@ -114,16 +114,133 @@ penguins |>
   kable()
 ```
 
+# arrange()
+
+```{r}
+#| label: arrange-01
+
+delitos |>
+  filter(Delito == "ROBO DE VEHICULO" & Canton == "MONTES DE OCA") |>
+  select(Delito, SubDelito, Hora, Canton, Distrito) |>
+  arrange(Distrito,Hora) |>
+  kable()
+```
 
 
+## Ejemplo 2
+
+```{r}
+#| label: arrange-02
+
+penguins |>
+  arrange(desc(body_mass_g)) |>
+  kable()
+```
+
+# mutate
+
+## ejemplo 1
+
+```{r}
+#| label: mutate-01
+
+penguins |>
+  select(species, body_mass_g) |>
+  mutate(body_mass_g = body_mass_g / 1000) |>
+  kable()
+```
+
+## Ejemplo 2
+
+```{r}
+#| label: mutate-02
+
+delitos |>
+   mutate(Fecha_Date = as.Date(delitos$Fecha, format="%m/%d/%Y")) |>
+  filter(Canton == "MONTES DE OCA") |>
+  select(Fecha, Canton, Delito, SubDelito) |>
+  arrange(Fecha) |>
+  kable()
+```
+
+# summarize
+
+## Ejemplo 1
+
+```{r}
+#| label: summarize-01
+
+penguins |>
+  group_by(species) |>
+  summarize(
+    body_mass_g_min = min(body_mass_g, na.rm = TRUE),
+    body_mass_g_max = max(body_mass_g, na.rm = TRUE),
+    body_mass_g_mean = mean(body_mass_g, na.rm = TRUE),
+    n = n()
+  )
+```
 
 
+## Ejemplo 2
 
+```{r}
+#| label: summarize-02
 
+# Cantidad de homicidios por provincia y cantón
+delitos |>
+  filter(Delito == "HOMICIDIO") |>
+  group_by(Provincia, Canton) |>
+  summarize(
+    homicidios_2023 = n()
+  ) |>
+  arrange(desc(homicidios_2023)) |>
+  kable()
+```
 
+## Ejemplo 3
 
+```{r}
+#| label: summarize-03
 
+# Cantidad de homicidios por género
 
+delitos |>
+  filter(Delito == "HOMICIDIO") |>
+  group_by(Genero) |>
+  summarize(
+    homicidios_2023 = n()
+  ) |>
+  arrange(desc(homicidios_2023)) |>
+  kable()
+```
+
+## Ejemplo 4
+
+```{r}
+#| label: summarize-04
+
+delitos |>
+  filter(Delito == "ASALTO") |>
+  group_by(Edad) |>
+  summarize(
+    asaltos_2023 = n()
+  ) |>
+  arrange(desc(asaltos_2023)) |>
+  kable()
+```
+
+## Ejemplo 5
+
+```{r}
+#| label: summarize-05
+
+# Promedio de masa y n cantidad de registros de pingüinos
+penguins |>
+  summarise(body_mass_g_mean = mean(body_mass_g, na.rm = TRUE),
+            body_mass_g_min = min(body_mass_g, na.rm = TRUE),
+            body_mass_g_max = max(body_mass_g, na.rm = TRUE),
+            n = n())
+```
 
 
 
